# crawl

./: .gitignore  CLAUDE.md  README.md  SAFETY.md  pyproject.toml
docs/: llm-extraction.md  sample-odi-report.md
docs/adr/: 001-odi-knowledge-module-taxonomy.md  002-demo-readiness-assessment.md  003-visual-lineage-diagrams.md  004-next-parser-informatica-powercenter.md
docs/diagrams/: crawl-architecture.excalidraw  etl-pipeline-lineage.excalidraw  export_images.py  generate_diagrams.py
docs/sources/: odi.md  powercenter.md
scripts/: llm_top10.py  setup-odi-testdb.sh
src/crawl/: __init__.py  analysis.py  cli.py  llm.py  models.py  report.py
src/crawl/export/: __init__.py
src/crawl/extraction/: __init__.py
src/crawl/parsers/: __init__.py  registry.py
src/crawl/parsers/odi/: __init__.py  db.py  xml.py
src/crawl/parsers/powercenter/: __init__.py  xml.py
src/crawl/triage/: __init__.py
tests/: test_odi_db_parser.py  test_odi_xml_parser.py  test_powercenter_xml_parser.py
tests/fixtures/powercenter/: demo_workflow.xml
